<resources>
  <string name="app_name">Encryption</string>
  <string name="plainText">明文</string>
  <string name="password">密码</string>
  <string name="encryption">加密</string>
  <string name="cipherText">密文</string>
  <string name="applicationId">com.hitrontech.myhitron.fidelity</string>
  <string name="versionCode">17</string>
  <string name="test_number">12</string>
  <string name="ht_security_key" translatable="false">eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiIxMiIsImlzcyI6IkhpdHJvbiIsImlhdCI6MTUyNTkzMTAyNiwibW9kZWwiOiJDT0RBLTQ2ODAiLCJ2ZW5kb3IiOiJGSVoiLCJzY29wZSI6e319.Pq-8gLnn5LCVjphMthF-wi2fGVEiqv3kMy16d2Yq37UmXCKRUBJi2_VrRKrRDDcK08rd0KBmLllYoaO2cDbE7KTZPMF1UbGwd9uIuEHhcAyTSrVB94zxRu-F6NayhFh6G4U8f4XEL0QobIVB57NlrPCDxxXv-oRKH6qGpyLjOck</string>
  <string name="decryption">解密</string>
  <string name="choice">选择</string>
  <string name="edit">编辑</string>
  <string name="change">Change</string>
  <string name="changeKey">修改KEY</string>
  <string name="key">KEY</string>
  <string name="encryption_decryption">加密/解密</string>
  <string name="generatePlainText">生成明文</string>
  <string name="write">写到文件</string>
  <string name="file_encryption_decryption">文件加密/解密</string>
  <string name="readFile">读取文件</string>
  <string name="ok">OK</string>
  <string name="file_path">文件路径</string>
  <string name="tips_file">请将文件放置到上述目录下！</string>
  <string name="about">关于</string>
</resources>
