<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
  <data>

  </data>
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/padding"
      android:orientation="vertical">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/plainText"/>
        <android.support.v7.widget.AppCompatEditText
          android:id="@+id/plainText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      </LinearLayout>

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding">
        <Button
          android:id="@+id/encryption"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:background="@drawable/button"
          android:text="@string/encryption"/>

        <Button
          android:id="@+id/changeKey"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:background="@drawable/button"
          android:text="@string/changeKey"/>
      </RelativeLayout>

      <LinearLayout
        android:id="@+id/keyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <android.support.v7.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/key"/>
        <android.support.v7.widget.AppCompatEditText
          android:id="@+id/key"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cipherText"/>

        <android.support.v7.widget.AppCompatEditText
          android:id="@+id/cipherText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:enabled="false"/>
      </LinearLayout>

      <Button
        android:id="@+id/decryption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginLeft="@dimen/padding"
        android:background="@drawable/button"
        android:text="@string/decryption"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        >
        <android.support.v7.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/plainText"/>

        <android.support.v7.widget.AppCompatEditText
          android:id="@+id/decryptionText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      </LinearLayout>

    </LinearLayout>
  </ScrollView>
</layout>
